syntax = "proto3";

option csharp_namespace = "CarManagementService";

service Booking_CarService {
  rpc GetAllBookingCars (Empty) returns (Booking_CarList);
  rpc GetBookingCarByID (Booking_CarRequest) returns (Booking_Car);
  rpc AddBookingCar (Booking_Car) returns (Booking_CarResponse);
  rpc UpdateBookingCar (Booking_Car) returns (Booking_CarResponse);
  rpc DeleteBookingCar (Booking_CarRequest) returns (Booking_CarResponse);
}
message Empty{}

message Booking_CarRequest{
  int32 bookingnr = 1;
}

message Booking_Car {
  int32 bookingnr = 1;
  string status = 2;
  string startdato = 3; // Lidt i tvivl om det skal v√¶re strings
  string starttime = 4; // Samme her
  string endtime = 5; // Og her
  string price = 6; 
  int32 carid = 7;
  int32 customerid = 8;
}

message Booking_CarList {
  repeated Booking_Car booking_cars = 1;
}

message Booking_CarResponse {
  bool success = 1;
  string message = 2;
}
